# cloud-studio-kubernetes-finops

./: .env.example  .gitignore  Makefile  __init__.py  discovery_results.json  discovery_results1.json  discovery_results2.json  discovery_results3.json  discovery_results4.json  docker-compose.yml  enhanced_discovery_results.json  enhanced_discovery_results1.json  package-lock.json  phase1_results1.json  phase1_results2.json  phase1_results3.json  phase1_results4.json  pyproject.toml  test.py
deployment/docker/: Dockerfile
requirements/: azure.txt  base.txt  dev.txt  prod.txt
scripts/: advanced_discovery.py  cost_collector.py  discovery_runner.py  setup_environment.py
src/finops/: cli.py  cli_phase1.py  cli_phase2.py
src/finops/analytics/: __init__.py  analytics_engine.py  benchmarking_analytics.py  cost_analytics.py  rightsizing_analytics.py  utilization_analytics.py  waste_analytics.py
src/finops/clients/: __init__.py
src/finops/clients/azure/: __init__.py  aks_client.py  client_factory.py  cost_client.py  cost_client_test.py  monitor_client copy.py  monitor_client.py  resource_client.py
src/finops/clients/kubernetes/: __init__.py  client_factory.py  k8s_client.py
src/finops/config/: logging.yaml  settings.py
src/finops/config/environments/: development.yaml  production.yaml
src/finops/core/: __init__.py  base_client.py  exceptions.py  models.py  utils.py
src/finops/discovery/: __init__.py  base.py  discovery_client.py  discovery_orchestrator.py  discovery_service.py  enhanced_orchestrator.py  orchestrator.py
src/finops/discovery/cost/: __init__.py  allocation.py  cost_discovery.py  trends.py
src/finops/discovery/infrastructure/: __init__.py  aks_discovery.py  network_discovery.py  node_pool_discovery.py  storage_discovery.py
src/finops/discovery/kubernetes/: __init__.py  cluster_discovery.py  resource_discovery.py  workload_discovery.py
src/finops/discovery/utilization/: __init__.py  metrics_collector.py  metrics_collector1.py  patterns.py  resource_usage.py
src/finops/mappers/: __init__.py  cost_mapper.py  discovery_mapper.py  resource_mapper.py
src/finops/models/: __init__.py  base_models.py  validation.py
